# rss_parser

./: .gitignore  LICENCE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_rss_parser.py
rss-parser/: rss-parser.py
rss_parser/: rss_parser.py
rss_parser/data/: .empty.txt  cached_news.db
