[metadata]
name = rss_parser_ptkh
version = 0.0.1
author = Khachidze Paata
author_email = peterkhachidze@gmail.com
description = XML format RSS feed parser
long_description = file: README.md
long_description_content_type = text/markdown
url = http://
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = RSS-parser
packages = find:
python_requires = >=3.9
include_package_data = True
[options.packages.find]
where = rss_parser