[metadata]
name = rss_parser
version = 0.0.1
author = Khachidze Paata
author_email = peterkhachidze@gmail.com
description = XML format RSS feed parser
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    rss_parser = rss_parser.rss_parser:main