[metadata]
name = rss_parser
version = 0.0.1
author = Khachidze Paata
author_email = peterkhachidze@gmail.com
description = XML format RSS feed parser
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires = 
    lxml==4.8.0
    pdfkit==1.0.0
    pytest==7.1.2
    python_dateutil==2.8.2
    setuptools==59.6.0
    colorama==0.4.4

[options.entry_points]
console_scripts =
    rss_parser = rss_parser.rss_parser:main